Add GOPATH/bin to path so go generate works right

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services:
   - docker
 
 script:
+  - export PATH=$PATH:$PWD/bin
   - git clone https://github.com/brimstone/projectbuilder
   - export PROJECTBUILDER=$PWD/projectbuilder
   - make travis
